@@ -67,6 +67,9 @@ void bind_session_settings()
         .def_readwrite("peer_tos", &session_settings::peer_tos)
         .def_readwrite("active_downloads", &session_settings::active_downloads)
         .def_readwrite("active_seeds", &session_settings::active_seeds)
+        .def_readwrite("active_dht_limit", &session_settings::active_dht_limit)
+        .def_readwrite("active_tracker_limit", &session_settings::active_tracker_limit)
+        .def_readwrite("active_lsd_limit", &session_settings::active_lsd_limit)
         .def_readwrite("active_limit", &session_settings::active_limit)
         .def_readwrite("auto_manage_prefer_seeds", &session_settings::auto_manage_prefer_seeds)
         .def_readwrite("dont_count_slow_torrents", &session_settings::dont_count_slow_torrents)
@@ -123,6 +126,7 @@ void bind_session_settings()
         .def_readwrite("incoming_starts_queued_torrents", &session_settings::incoming_starts_queued_torrents)
         .def_readwrite("report_true_downoaded", &session_settings::report_true_downloaded)
         .def_readwrite("strict_end_game_mode", &session_settings::strict_end_game_mode)
+        .def_readwrite("broadcast_lsd", &session_settings::broadcast_lsd)
     ;
 
     enum_<proxy_settings::proxy_type>("proxy_type")
