@@ -145,6 +145,9 @@ namespace libtorrent
 			, peer_tos(0)
 			, active_downloads(8)
 			, active_seeds(5)
+			, active_dht_limit(88) // don't announce more than once every 40 seconds
+			, active_tracker_limit(360) // don't announce to trackers more than once every 5 seconds
+			, active_lsd_limit(60) // don't announce to local network more than once every 5 seconds
 			, active_limit(15)
 			, auto_manage_prefer_seeds(false)
 			, dont_count_slow_torrents(true)
@@ -502,8 +505,17 @@ namespace libtorrent
 		// they are subject to. If there are too many torrents
 		// some of the auto managed ones will be paused until
 		// some slots free up.
+		// active_dht_limit and active_tracker_limit limits the
+		// number of torrents that will be active on the DHT
+		// versus the tracker. If the active limit is set higher
+		// than these numbers, some torrents will be "active" in
+		// the sense that they will accept incoming connections,
+		// but not announce on the DHT or the tracker
 		int active_downloads;
 		int active_seeds;
+		int active_dht_limit;
+		int active_tracker_limit;
+		int active_lsd_limit;
 		int active_limit;
 
 		// prefer seeding torrents when determining which torrents to give 
